--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-
-server.port=3500
+spring.datasource.url=jdbc:mysql://110.64.88.125:9939/banking?useunicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=ibmbanking123.
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.current_session_context_class = org.springframework.orm.hibernate5.SpringSessionContext
