修复SQL查询语句错误

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://192.168.88.234:3306/banking?useunicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://111.230.238.192:3306/banking?useunicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=ibmbanking123.
+spring.datasource.password=537POWERteam
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.current_session_context_class = org.springframework.orm.hibernate5.SpringSessionContext
+context_class = org.springframework.orm.hibernate5.SpringSessionContext
