完成流水线

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://111.230.238.192:3306/banking?useunicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://110.64.88.125:9939/banking?useunicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=537POWERteam
+spring.datasource.password=ibmbanking123.
 spring.jpa.hibernate.ddl-auto=update
 context_class = org.springframework.orm.hibernate5.SpringSessionContext
