--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=ibmbanking123.
 spring.jpa.hibernate.ddl-auto=update
 context_class = org.springframework.orm.hibernate5.SpringSessionContext
+
+server.port=8090
