--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.password=ibmbanking123.
 spring.jpa.hibernate.ddl-auto=update
 context_class = org.springframework.orm.hibernate5.SpringSessionContext
 
+server.address=0.0.0.0
 server.port=8090
